--- a/mpmsnow.vcproj
+++ b/mpmsnow.vcproj
@@ -362,6 +362,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\CollisionPlane.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Grid.cpp"
 				>
 			</File>
@@ -373,6 +377,14 @@
 		<Filter
 			Name="include"
 			>
+			<File
+				RelativePath=".\CollisionObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CollisionPlane.h"
+				>
+			</File>
 			<File
 				RelativePath=".\include\Grid.h"
 				>
