Added preconditioner header to project
I should probably move that remapping shiz into a preconditioner
shouldn't I, seeing as it is basically a preconditioner, and it'll make
the code easier to read...

--- a/mpmsnow.vcproj
+++ b/mpmsnow.vcproj
@@ -418,6 +418,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\Preconditioner.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\SnowConstituativeModel.h"
 				>
 			</File>
