--- a/mpmsim.vcproj
+++ b/mpmsim.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="simTest"
+	Name="mpmsim"
 	ProjectGUID="{4AB397A0-5938-47D3-9FBB-B15A8D2AAF7C}"
 	RootNamespace="simpleGL"
 	Keyword="Win32Proj"
@@ -26,7 +26,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="2"
 			>
 			<Tool
@@ -72,23 +72,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="mpmsnow.lib"
-				OutputFile="./mpmsnow.exe"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(CUDA_PATH)/lib/$(PlatformName)&quot;;../../common/lib;../../common/GLEW/lib;./Debug"
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/simpleGL.pdb"
-				SubSystem="1"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -100,9 +87,6 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="IF EXIST cg_variables.h move cg_variables.h $(ConfigurationName)\"
 			/>
@@ -111,7 +95,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="4"
 			CharacterSet="2"
 			>
 			<Tool
@@ -153,24 +137,10 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="mpmsnow.lib"
-				OutputFile="../../bin/win32/$(ConfigurationName)/simpleGL.exe"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(CUDA_PATH)/lib/$(PlatformName)&quot;;../../common/lib;../../common/GLEW/lib;./Release"
-				GenerateDebugInformation="true"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="1"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				TargetMachine="1"
+				Name="VCLibrarianTool"
 			/>
 			<Tool
 				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -180,9 +150,6 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -364,7 +331,67 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\main.cpp"
+				RelativePath=".\src\MpmSim\CollisionPlane.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MpmSim\ConjugateGradients.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MpmSim\ConjugateResiduals.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MpmSim\Grid.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MpmSim\SnowConstituativeModel.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="include"
+			>
+			<File
+				RelativePath=".\include\MpmSim\CollisionObject.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\CollisionPlane.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\ConjugateGradients.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\ConjugateResiduals.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\ConstituativeModel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\Grid.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\ParticleData.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\Preconditioner.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\SnowConstituativeModel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\Solver.h"
 				>
 			</File>
 		</Filter>
