--- a/simTest.vcproj
+++ b/simTest.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="mpmsnow"
+	Name="simTest"
 	ProjectGUID="{BB3AEE03-BA31-4940-9DCB-3FDA13B9FCC5}"
 	RootNamespace="simpleGL"
 	Keyword="Win32Proj"
@@ -26,7 +26,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="2"
 			>
 			<Tool
@@ -72,10 +72,16 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
+				Name="VCLinkerTool"
+				AdditionalDependencies="mpmsim.lib"
+				AdditionalLibraryDirectories="&quot;$(CUDA_PATH)/lib/$(PlatformName)&quot;;../../common/lib;../../common/GLEW/lib;&quot;./$(ConfigurationName)&quot;"
+				GenerateDebugInformation="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -87,6 +93,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="IF EXIST cg_variables.h move cg_variables.h $(ConfigurationName)\"
 			/>
@@ -95,7 +104,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="2"
 			>
 			<Tool
@@ -137,10 +146,15 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
+				Name="VCLinkerTool"
+				AdditionalDependencies="mpmsim.lib"
+				AdditionalLibraryDirectories="&quot;$(CUDA_PATH)/lib/$(PlatformName)&quot;;../../common/lib;../../common/GLEW/lib;&quot;./$(ConfigurationName)&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -150,6 +164,9 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -331,67 +348,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\MpmSnow\CollisionPlane.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\MpmSnow\ConjugateGradients.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\MpmSnow\ConjugateResiduals.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\MpmSnow\Grid.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\MpmSnow\SnowConstituativeModel.cpp"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="include"
-			>
-			<File
-				RelativePath=".\include\MpmSnow\CollisionObject.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\CollisionPlane.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\ConjugateGradients.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\ConjugateResiduals.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\ConstituativeModel.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\Grid.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\ParticleData.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\Preconditioner.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\SnowConstituativeModel.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\MpmSnow\Solver.h"
+				RelativePath=".\src\main.cpp"
 				>
 			</File>
 		</Filter>
