--- a/unitTests.vcproj
+++ b/unitTests.vcproj
@@ -374,6 +374,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\tests\TestGrid.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\tests\TestParticleData.cpp"
 					>
 				</File>
@@ -392,6 +396,10 @@
 			>
 			<File
 				RelativePath=".\include\tests\TestConjugateResiduals.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\tests\TestGrid.h"
 				>
 			</File>
 			<File
