Using kd tree instead of grid neighbour query

--- a/mpmsim.vcproj
+++ b/mpmsim.vcproj
@@ -431,6 +431,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\MpmSim\KdTree.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\MpmSim\KdTree.inl"
+				>
+			</File>
+			<File
 				RelativePath=".\include\MpmSim\LinearSolver.h"
 				>
 			</File>
