Made MaterialPointData more convenient

--- a/houdiniPlugin.vcproj
+++ b/houdiniPlugin.vcproj
@@ -190,6 +190,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\houdiniPlugin\HoudiniSolveTermination.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\houdiniPlugin\SOP_MPMSim.cpp"
 				>
 			</File>
@@ -203,6 +207,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\include\houdiniPlugin\HoudiniSolveTermination.h"
+				>
+			</File>
 			<File
 				RelativePath=".\include\houdiniPlugin\SOP_MPMSim.h"
 				>
